<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:title="@string/bottom_menu_home"
        android:orderInCategory="10"
        android:icon="@drawable/bottom_icon_home"/>

    <item
        android:id="@+id/action_catalog"
        android:title="@string/bottom_menu_catalog"
        android:orderInCategory="30"
        android:icon="@drawable/bottom_icon_catalog"/>

    <item
        android:id="@+id/action_search"
        android:title="@string/bottom_menu_search"
        android:orderInCategory="20"
        android:icon="@drawable/bottom_icon_search"/>

    <item
        android:id="@+id/action_profile"
        android:title="@string/bottom_menu_profile"
        android:orderInCategory="40"
        android:icon="@drawable/bottom_icon_profile"/>

</menu>