<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/detail_movie_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/detail_movie_front_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="80dp"
            android:scaleType="centerInside" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/bottom_sheet_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/details_movie_background"
        app:behavior_hideable="false"
        app:behavior_peekHeight="360dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/movie_details_margin_end"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/detail_movie_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/movie_details_margin_bottom"
                        android:textColor="@color/primary_text_color"
                        android:textSize="@dimen/movie_details_title"
                        tools:text="Эмма" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/item_movie_favorite"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="end|center"
                        android:button="@drawable/custom_checkbox"
                        android:buttonTint="#DA3C3C"
                        android:focusable="true" />

                </FrameLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/movie_details_margin_bottom"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/detail_movie_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/movie_details_margin_end"
                        android:textColor="@color/primary_text_color"
                        android:textSize="@dimen/movie_details_text"
                        tools:text="Великобритания" />

                    <TextView
                        android:id="@+id/detail_movie_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/movie_details_margin_end"
                        android:textColor="@color/primary_text_color"
                        android:textSize="@dimen/movie_details_text"
                        tools:text="2020" />

                    <TextView
                        android:id="@+id/detail_movie_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text_color"
                        android:textSize="@dimen/movie_details_text"
                        tools:text="1 ч. 30 мин." />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/movie_details_margin_bottom"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/movie_details_margin_end"
                        android:text="@string/label_imdb_rating"
                        android:textColor="@color/primary_text_color"
                        android:textSize="@dimen/movie_details_label_rating" />

                    <TextView
                        android:id="@+id/detail_movie_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/movie_details_margin_end"
                        android:background="@drawable/details_movie_rating_background"
                        android:textColor="@color/primary_text_color"
                        android:textSize="@dimen/movie_details_rating"
                        android:textStyle="bold"
                        tools:text="6.9" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/movie_note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_baseline_edit_note_24"
                        tools:ignore="SpeakableTextPresentCheck" />

                </LinearLayout>

                <TextView
                    android:id="@+id/detail_movie_genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/movie_details_margin_bottom"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/movie_details_text"
                    tools:text="комедия, мелодрама" />

                <TextView
                    android:id="@+id/detail_movie_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/movie_details_margin_bottom"
                    android:textColor="@color/primary_text_color"
                    tools:text="@string/overview" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/movie_details_margin_bottom"
                    android:text="@string/movie_cast"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/movie_details_text" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/container_actors_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>